--- a/en/home/home.html
+++ b/en/home/home.html
@@ -20,17 +20,17 @@
         <a href="#"><img src="/img/uk.png" width="35" height="21" alt="UK flag"></a>
       </div>
   </header>
-  <nav id="menu">
+  <nav id="menu" style="left: -250px;">
       <ul>
           <li><a href="/en/home/home.html">Home</a></li>
           <li><a href="/en/about-me/about-me.html">About me</a></li>
-          <li class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">My stuff</a>
-              <div class="dropdown-content">
-                  <a href="/en/my-stuff/daily/daily.html">Daily</a>
-                  <a href="/en/my-stuff/homelab/homelab.html">Homelab</a>
-                  <a href="/en/my-stuff/retro/retro.html">Retro</a>
-              </div>
+          <li class="menu-item">
+            <a href="javascript:void(0)" class="menu-link">My stuff</a>
+            <ul class="submenu">
+              <li><a href="/en/my-stuff/daily/daily.html">Daily</a></li>
+              <li><a href="/en/my-stuff/homelab/homelab.html">Homelab</a></li>
+              <li><a href="/en/my-stuff/retro/retro.html">Retro</a></li>
+            </ul>
           </li>
           <li><a href="/en/notes/notes.html">Notes</a></li>
           <li><a href="/en/links/links.html">Links</a></li>
@@ -39,7 +39,7 @@
     </nav>
     <main id="main-home">
       <article class="jump-in" id="home">
-        <h1 class="homepage-title">Welcome to my Website!</h1>
+        <h1 class="homepage-title">🎉 Welcome to my Website! 👋</h1>
         <p class="homepage-description">
           I appreciate you taking the time to visit. Please feel free to explore the subpages for a more comprehensive understanding of both myself and my work. Thank you for your interest!
         </p>
@@ -70,35 +70,52 @@
         <p class="made-by">Made by Jaroslaw Dulewicz 2023</p>
       </div>
     </footer>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    document.querySelector(".hamburger").addEventListener("click", function (event) {
+      event.stopPropagation();
+      const menu = document.getElementById("menu");
+      if (menu.style.left === "-250px") {
+        menu.style.left = "0px";
+      } else {
+        menu.style.left = "-250px";
+      }
+    });
+
+    document.addEventListener("click", function (event) {
+      const menu = document.getElementById("menu");
+      if (menu.style.left === "0px") {
+        menu.style.left = "-250px";
+      }
+    });
+
+    document.getElementById("menu").addEventListener("click", function (event) {
+      event.stopPropagation();
+    });
+
+    const menuLinks = document.querySelectorAll(".menu-link");
+    menuLinks.forEach((link) => {
+      link.addEventListener("click", (event) => {
+        event.stopPropagation();
+        event.preventDefault();
+        const submenu = event.target.nextElementSibling;
+        if (submenu.style.display === "block") {
+          submenu.style.display = "none";
+        } else {
+          submenu.style.display = "block";
+        }
+      });
+    });
+  });
+</script>
+
+     <!-- current year -->
+     <script>
+      var currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").innerHTML = currentYear;
+    </script>
+   
   </body>
 </html>
-
-<!-- current year -->
-<script>
-  var currentYear = new Date().getFullYear();
-  document.getElementById("currentYear").innerHTML = currentYear;
-</script>
-
-<script>
-document.getElementById('hamburger').addEventListener('click', function(event) {
-    event.stopPropagation();
-    const menu = document.getElementById('menu');
-    if (menu.style.left === '-250px') {
-        menu.style.left = '0px';
-    } else {
-        menu.style.left = '-250px';
-    }
-});
-
-document.addEventListener('click', function(event) {
-    const menu = document.getElementById('menu');
-    if (menu.style.left === '0px') {
-        menu.style.left = '-250px';
-    }
-});
-
-document.getElementById('menu').addEventListener('click', function(event) {
-    event.stopPropagation();
-});
-
-</script>
