--- a/en/home/home.html
+++ b/en/home/home.html
@@ -37,7 +37,7 @@
           <li><a href="/en/contact/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main id="main-home">
+    <main id="main-home" class="gradient">
       <article class="jump-in" id="home">
         <h1 class="homepage-title">🎉 Welcome to my Website! 👋</h1>
         <p class="homepage-description">
